--- a/assets/scss/styles.scss
+++ b/assets/scss/styles.scss
@@ -29,6 +29,11 @@ body {
 	background-color: #fff;
 	padding: 0.35rem;
 
+	-webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+
 	&:after {
 		content: '';
 		display: table;
@@ -119,6 +124,45 @@ select {
 
 	+ select {
 		margin-left: 0.3rem;
+	}
+
+}
+
+
+
+
+/* Customize the label (the container) */
+.checkbox {
+  display: block;
+  position: relative;
+	cursor: pointer;
+
+	/* Hide the browser's default checkbox */
+	input {
+	  position: absolute;
+	  opacity: 0;
+	  cursor: inherit;
+	  height: 100%;
+	  width: 100%;
+	  left: 0;
+	  top: 0;
+	}
+
+	.mark {
+		cursor: inherit;
+		padding: 0.3rem;
+
+		background-color: #eee;
+		border-radius: 5px;
+
+		transition: background-color 300ms ease;
+		&:hover {
+			background-color: #0ff;
+		}
+	}
+
+	input:checked ~ .mark {
+	  background-color: #0ff;
 	}
 
 }
