--- a/assets/scss/styles.scss
+++ b/assets/scss/styles.scss
@@ -104,7 +104,7 @@ select {
 	cursor: pointer;
 	background-color: #eee;
 	border-radius: 5px;
-	padding: 0.3rem;
+	padding: 0.3rem 0.5rem;
 	margin: 0;
 
 	-webkit-appearance: none;
